resources/css/style.css
/* orange color: #e67e22 */

/* -------------------------------- */
/* BASIC SETUP */
/* -------------------------------- */
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

html {
  background-color: #fff;
  color: #555;
  font-family: "Lato", "Arial", sans-serif;
  font-size: 20px;
  font-weight: 300;
  text-rendering: optimizeLegibility;
}

/* -------------------------------- */
/* REUSABLE COMPONENTS*/
/* -------------------------------- */

section {
  padding: 80px 0;
}

/* -------- HEADINGS -------- */
h1,
h2,
h3 {
  text-transform: uppercase;
  font-weight: 300;
}

h1 {
  color: #fff;
  margin-top: 0;
  margin-bottom: 20px;
  font-size: 250%;
  word-spacing: 4px;
  letter-spacing: 1px;
}

h2 {
  font-size: 180%;
  word-spacing: 2px;
  text-align: center;
  margin-bottom: 30px;
  letter-spacing: 1px;
}

h2:after {
  display: block;
  height: 2px;
  background-color: #e67e22;
  content: "";
  width: 100px;
  margin: 0 auto;
  margin-top: 30px;
}

h3 {
  font-size: 120%;
  margin-bottom: 20px;
  margin-top: 20px;
}

/* -------- LINKS -------- */
a:link,
a:visited {
  color: #e67e22;
  text-decoration: none;
  border-bottom: 1px solid #e67e22;
  padding-top: 2px;
  transition: all 0.2s;
}

a:hover,
a:active {
  color: #555;
  border-bottom: 1px solid transparent;
}

/* -------- PARAGRAPHS -------- */
.long-copy {
  line-height: 145%;

  margin: 0 auto;
}

.features-box,
.paragraph-text {
  font-size: 90%;
  line-height: 145%;
}

/* -------- ICONS -------- */
.icon-big {
  font-size: 350%;
  display: block;
  color: #e67e22;
  margin-bottom: 10px;
  margin-top: 10px;
}

.icon-small {
  display: inline-block;
  width: 30px;
  text-align: center;
  color: #e67e22;
  font-size: 1.2rem;
  margin-right: 10px;
  margin-bottom: 10px;
}

/* -------- BUTTONS -------- */

.btn:link,
.btn:visited {
  display: inline-block;
  color: #fff;
  padding: 10px 30px;
  font-weight: 300;
  text-decoration: none;
  border-radius: 6px;
  border: 1px solid #e67e22;
  transition: background-color 200ms, border 200ms, color 200ms;
}

.btn-full:link,
.btn-full:visited {
  background-color: #e67e22;
  margin-right: 15px;
}

.btn-ghost:link,
.btn-ghost:visited {
  color: #e67e22;
}

.btn:hover,
.btn:active {
  background-color: #cf6d17;
  color: #fff;
  border: 1px solid #cf6d17;
}

/* -------------------------------- */
/* HEADER */
/* -------------------------------- */

header {
  background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)),
    url("/resources/css/img/hero.jpg");
  background-size: cover;
  background-position: center;
  height: 100vh;
}

.hero-text-box {
  position: absolute;
  max-width: 1240px;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
}

nav {
  max-width: 1240px;
  margin: auto;
}

ul {
  display: flex;
}

.logo {
  height: 100px;
  width: auto;
  float: left;
  margin-top: 20px;
}

.main-nav {
  float: right;
  list-style: none;
  margin-top: 50px;
}

.main-nav > li {
  display: inline-block;
  margin-left: 40px;
  position: relative;
}

.main-nav > li > a:link,
.main-nav > li > a:visited {
  padding: 5px 0;
  text-decoration: none;
  color: #fff;
  text-transform: uppercase;
  font-size: 90%;
  border-bottom: 2px solid transparent;
}

/* .main-nav > li > a:hover,
.main-nav > li > a:active {
  border-bottom: 2px solid #e67e22;
  transition: border-bottom 250ms;
} */

.main-nav > li > span {
  position: absolute;
  margin-top: 15px;
  bottom: -5px;
  right: 0;
  width: 0%;
  height: 2px;
  background: #e67e22;
  transition: all 0.3s;
}

.main-nav > li:hover > span {
  width: 100%;
}

/* -------------------------------- */
/* FEATURES */
/* -------------------------------- */
.features-text {
  width: 60%;
  margin: 0 auto;
}

.features-grid {
  max-width: 1240px;
  display: grid;
  grid-template-columns: repeat(4, 25%);
  margin: 0 auto;
  grid-column-gap: 40px;
}

.long-copy {
  margin-bottom: 40px;
}

.features-box {
  /* width: 25%;
  padding: 1.5rem; */
}

/* -------------------------------- */
/* MEALS */
/* -------------------------------- */
.favourite-meals {
  padding: 0;
}

.meals-showcase {
  width: 100%;
  display: grid;
  grid-template-columns: 25% 25% 25% 25%;
  list-style: none;
}

.meals-showcase > li {
  display: block;
  overflow: hidden;
  background-color: #000;
}

.meals-showcase > li > img {
  width: 100%;
  transform: scale(1.3);
  transition: all 0.4s;
  opacity: 0.7;
}

.meals-showcase > li > img:hover {
  transform: scale(1.03);
  opacity: 1;
}

/* -------------------------------- */
/* HOW IT WORKS */
/* -------------------------------- */
.how-it-works {
  background-color: #f4f4f4;
}

.steps-grid {
  max-width: 1240px;
  margin: 0 auto;
  display: grid;
  grid-template-areas: "iphone-logo steps";
}

.iphone-logo {
  margin-left: 150px;
  margin-right: 60px;
}

.iphone-logo > img {
  height: 500px;
  width: auto;
  margin-top: 60px;
  grid-area: iphone-logo;
}

.steps {
  margin-top: 130px;
}

.steps > ul {
  list-style: none;
  grid-area: steps;
}

.steps .work-steps:nth-child(3) {
  margin-bottom: 80px;
}

.work-steps {
  margin-bottom: 40px;
}

.work-steps > div {
  display: inline-block;
  height: 55px;
  width: 55px;
  font-size: 1.6rem;
  padding: 5px;
  margin-right: 25px;
  color: #e67e22;
  border: 2px solid #e67e22;
  border-radius: 50%;
  text-align: center;
}

.work-steps > p {
  display: inline-block;
}

.btn-app:link,
.btn-app:visited {
  border-bottom: 0;
}

.btn-app > img {
  height: 50px;
  width: auto;
  margin-right: 15px;
}

/* -------------------------------- */
/* CITIES */
/* -------------------------------- */

.cities-grid {
  display: grid;
  max-width: 1240px;
  margin: 0 auto;
  grid-template-columns: repeat(4, 25%);
  grid-column-gap: 30px;
}

.cities > img {
  height: auto;
  width: 100%;
  margin-top: 15px;
}

